# toolkit

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  conversion_options.yaml.in  encrypt-model-ebg.py  export_yolo.py  image_from_raw.py  image_od.py  image_to_raw.py  setup.py  synap_convert.cmake  synap_convert.py
.github/workflows/: build-release-pip-package.yml
model/: README.md  convert.py  copy.py  profile.py  requirements.txt
model/docs/: convert.md  copy.md  export.md  profile.md
model/export/: base.py  yolo.py
model/scripts/: benchmark.sh
model/utils/: cleanup.py  model_info.py
pyapp/: synap_cli.py  synap_cli_od.py
pysynap/: __init__.py  acuitylib_path.py  bundler.py  converter.py  exceptions.py  graph_segmenter.py  meta.py  network.py  requirements.txt
pysynap/converters/: __init__.py  acuity_converter.py  onnx_converter.py  tflite_converter.py
pysynap/scripts/: synap_help.py
pysynap/tools/: README.md  __init__.py  convert.py  copy.py  profile.py
pysynap/utils/: __init__.py  benchmark.sh  colors_coco.json  utils.py
tests/: README.rst  bundler_test.py  clustering_test.py  conftest.py  graph_segmenter_test.py  hc_e2e_test.py  heterogeneous_converter_test.py  meta_test.py  model_zoo_test.py  network_test.py  tflite_write_test.py  tool_test.py
tests/data/: bundle.json  meta.yaml  subgraph_details_onnx.json  subgraph_details_tflite.json
tools/: README.md  convert.py  copy.py  profile.py
tools/docs/: convert.md  copy.md  export.md  profile.md
tools/export/: base.py  yolo.py
tools/utils/: cleanup.py  temp_script.py
(+21 files in other folders)
